--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "M.A.W.T.A",
-  "name": "Majelis Ainul Yaqin",
+  "name": "Personal Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
